// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.anonymizeAccountByEmail preserves a vote in a closed step while anonymizing its author 1`] = `
Object {
  "account": Object {
    "deletedAccountAt": null,
    "email": "emailing.user17@fake-email.com",
    "id": "VXNlcjplbWFpbGluZ1VzZXIxNw==",
    "username": "emailingUser17",
  },
  "closedVote": Object {
    "author": Object {
      "email": "emailing.user17@fake-email.com",
      "id": "VXNlcjplbWFpbGluZ1VzZXIxNw==",
      "username": "emailingUser17",
    },
    "createdAt": "2025-08-03 00:00:00",
    "id": "2074",
    "proposal": Object {
      "id": "UHJvcG9zYWw6cHJvcG9zYWxFbWFpbGluZ0NvbGxlY3RWb3RlMg==",
    },
    "published": true,
    "ranking": null,
    "step": Object {
      "id": "Q29sbGVjdFN0ZXA6Y29sbGVjdFN0ZXBWb3RlRW1haWxpbmc=",
    },
  },
}
`;

exports[`mutations.anonymizeAccountByEmail preserves a vote in a closed step while anonymizing its author 2`] = `
Object {
  "anonymizeAccountByEmail": Object {
    "email": "emailing.user17@fake-email.com",
    "errorCode": null,
  },
}
`;

exports[`mutations.anonymizeAccountByEmail preserves a vote in a closed step while anonymizing its author 3`] = `
Object {
  "account": Object {
    "deletedAccountAt": Any<String>,
    "email": null,
    "id": "VXNlcjplbWFpbGluZ1VzZXIxNw==",
    "username": "Utilisateur supprimé",
  },
  "closedVote": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjplbWFpbGluZ1VzZXIxNw==",
      "username": "Utilisateur supprimé",
    },
    "createdAt": "2025-08-03 00:00:00",
    "id": "2074",
    "proposal": Object {
      "id": "UHJvcG9zYWw6cHJvcG9zYWxFbWFpbGluZ0NvbGxlY3RWb3RlMg==",
    },
    "published": true,
    "ranking": null,
    "step": Object {
      "id": "Q29sbGVjdFN0ZXA6Y29sbGVjdFN0ZXBWb3RlRW1haWxpbmc=",
    },
  },
}
`;

exports[`mutations.anonymizeAccountByEmail preserves content in open and closed steps while anonymizing its author 1`] = `
Object {
  "account": Object {
    "deletedAccountAt": null,
    "email": "user@test.com",
    "id": "VXNlcjp1c2VyNQ==",
    "username": "user",
  },
  "closedArgument": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
    "id": "QXJndW1lbnQ6YXJndW1lbnQxNDg=",
    "type": "AGAINST",
  },
  "closedOpinion": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "body": "<p>Magni voluptates harum modi tempore quis numquam. Est atque nulla rerum et aut aut fugit.</p>",
    "id": "T3BpbmlvbjpvcGluaW9uNTE=",
    "title": "Opinion 51",
  },
  "closedProposal": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "body": "TODO",
    "estimation": 100,
    "id": "UHJvcG9zYWw6cHJvcG9zYWwxMg==",
    "summary": null,
    "title": "Proposition plus votable",
  },
  "commentableProposal": Object {
    "comments": Object {
      "edges": Array [
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": "user@test.com",
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQzMg==",
          },
        },
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": "user@test.com",
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQzMQ==",
          },
        },
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": "user@test.com",
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQzMA==",
          },
        },
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": "user@test.com",
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQyOQ==",
          },
        },
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": "user@test.com",
              "id": "VXNlcjp1c2VyNQ==",
              "username": "user",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQyOA==",
          },
        },
      ],
    },
  },
  "event": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "body": "<i>L’exactitude des informations ci-dessous relève uniquement de la responsabilité de l’organisateur de l’évènement“</i> <h2>Objet</h2> exprimer et échanger sur les réformes qui vous semblent nécessaires <h2>Public attendu</h2> Cet événement est ouvert au public dans la limite de 30 participants, sans inscription. Pour participer, rendez-vous à l’heure dite et au lieu indiqué.",
    "enabled": true,
    "id": "RXZlbnQ6ZXZlbnQx",
    "link": null,
    "timeRange": Object {
      "endAt": "2032-03-10 00:00:00",
      "startAt": "2032-03-01 00:00:00",
    },
    "title": "Event with registrations",
  },
  "openArgument": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "body": "Coucou, je suis un bel argument !",
    "id": "QXJndW1lbnQ6YXJndW1lbnQx",
    "type": "AGAINST",
  },
  "openOpinion": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "body": "<p>Magni voluptates harum modi tempore quis numquam. Est atque nulla rerum et aut aut fugit.</p>",
    "id": "T3BpbmlvbjpvcGluaW9uMTA1",
    "title": "Opinion 105 parmis tant d'autres",
  },
  "openProposal": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "body": "<p>On va en faire un beau gymnase, promis :)</p>",
    "estimation": null,
    "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
    "summary": null,
    "title": "Rénovation du gymnase",
  },
  "openSource": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "body": "blabla",
    "id": "U291cmNlOnNvdXJjZTE=",
    "link": "https://www.google.fr",
    "title": "Ma source",
  },
  "openVote": Object {
    "author": Object {
      "email": "user@test.com",
      "id": "VXNlcjp1c2VyNQ==",
      "username": "user",
    },
    "createdAt": "2017-02-01 00:00:53",
    "id": "1053",
    "proposal": Object {
      "id": "UHJvcG9zYWw6cHJvcG9zYWwxNw==",
    },
    "published": true,
    "ranking": null,
    "step": Object {
      "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwOA==",
    },
  },
}
`;

exports[`mutations.anonymizeAccountByEmail preserves content in open and closed steps while anonymizing its author 2`] = `
Object {
  "anonymizeAccountByEmail": Object {
    "email": "user@test.com",
    "errorCode": null,
  },
}
`;

exports[`mutations.anonymizeAccountByEmail preserves content in open and closed steps while anonymizing its author 3`] = `
Object {
  "account": Object {
    "deletedAccountAt": Any<String>,
    "email": null,
    "id": "VXNlcjp1c2VyNQ==",
    "username": "Utilisateur supprimé",
  },
  "closedArgument": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "body": "<p>Quaerat quia sunt impedit labore minima fugiat praesentium. Occaecati ad sunt officia rerum ex enim necessitatibus.</p>",
    "id": "QXJndW1lbnQ6YXJndW1lbnQxNDg=",
    "type": "AGAINST",
  },
  "closedOpinion": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "body": "<p>Magni voluptates harum modi tempore quis numquam. Est atque nulla rerum et aut aut fugit.</p>",
    "id": "T3BpbmlvbjpvcGluaW9uNTE=",
    "title": "Opinion 51",
  },
  "closedProposal": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "body": "TODO",
    "estimation": 100,
    "id": "UHJvcG9zYWw6cHJvcG9zYWwxMg==",
    "summary": null,
    "title": "Proposition plus votable",
  },
  "commentableProposal": Object {
    "comments": Object {
      "edges": Array [
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": null,
              "id": "VXNlcjp1c2VyNQ==",
              "username": "Utilisateur supprimé",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQzMg==",
          },
        },
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": null,
              "id": "VXNlcjp1c2VyNQ==",
              "username": "Utilisateur supprimé",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQzMQ==",
          },
        },
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": null,
              "id": "VXNlcjp1c2VyNQ==",
              "username": "Utilisateur supprimé",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQzMA==",
          },
        },
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": null,
              "id": "VXNlcjp1c2VyNQ==",
              "username": "Utilisateur supprimé",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQyOQ==",
          },
        },
        Object {
          "node": Object {
            "answers": Array [],
            "author": Object {
              "email": null,
              "id": "VXNlcjp1c2VyNQ==",
              "username": "Utilisateur supprimé",
            },
            "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In in elit eget dui bibendum luctus euismod sit amet odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Nulla mollis aliquam faucibus. Nullam pharetra mattis lacus. In vitae ex nisl. Integer faucibus, purus vitae egestas gravida, ante nisi semper magna, nec interdum est orci at purus.",
            "id": "Q29tbWVudDpwcm9wb3NhbENvbW1lbnQyOA==",
          },
        },
      ],
    },
  },
  "event": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "body": "<i>L’exactitude des informations ci-dessous relève uniquement de la responsabilité de l’organisateur de l’évènement“</i> <h2>Objet</h2> exprimer et échanger sur les réformes qui vous semblent nécessaires <h2>Public attendu</h2> Cet événement est ouvert au public dans la limite de 30 participants, sans inscription. Pour participer, rendez-vous à l’heure dite et au lieu indiqué.",
    "enabled": true,
    "id": "RXZlbnQ6ZXZlbnQx",
    "link": null,
    "timeRange": Object {
      "endAt": "2032-03-10 00:00:00",
      "startAt": "2032-03-01 00:00:00",
    },
    "title": "Event with registrations",
  },
  "openArgument": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "body": "Coucou, je suis un bel argument !",
    "id": "QXJndW1lbnQ6YXJndW1lbnQx",
    "type": "AGAINST",
  },
  "openOpinion": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "body": "<p>Magni voluptates harum modi tempore quis numquam. Est atque nulla rerum et aut aut fugit.</p>",
    "id": "T3BpbmlvbjpvcGluaW9uMTA1",
    "title": "Opinion 105 parmis tant d'autres",
  },
  "openProposal": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "body": "<p>On va en faire un beau gymnase, promis :)</p>",
    "estimation": null,
    "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
    "summary": null,
    "title": "Rénovation du gymnase",
  },
  "openSource": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "body": "blabla",
    "id": "U291cmNlOnNvdXJjZTE=",
    "link": "https://www.google.fr",
    "title": "Ma source",
  },
  "openVote": Object {
    "author": Object {
      "email": null,
      "id": "VXNlcjp1c2VyNQ==",
      "username": "Utilisateur supprimé",
    },
    "createdAt": "2017-02-01 00:00:53",
    "id": "1053",
    "proposal": Object {
      "id": "UHJvcG9zYWw6cHJvcG9zYWwxNw==",
    },
    "published": true,
    "ranking": null,
    "step": Object {
      "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwOA==",
    },
  },
}
`;
